[gd_scene load_steps=4 format=3 uid="uid://cbvkw8jvgavwu"]

[ext_resource type="Theme" uid="uid://b7rdkq8l5i5od" path="res://themes/menu_button_theme.tres" id="1_6a8nf"]
[ext_resource type="Script" uid="uid://edb0vxultbg1" path="res://scripts/dialog_button.gd" id="2_tunc6"]
[ext_resource type="Texture2D" uid="uid://b0hipjfm1x7jj" path="res://assets/art/demons/wrath/wrath-headshot.png" id="3_2yhpw"]

[node name="DialogButton" type="Button"]
custom_minimum_size = Vector2(400, 100)
theme = ExtResource("1_6a8nf")
text = "Dialog Name"
script = ExtResource("2_tunc6")

[node name="PartnerIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = -20.0
offset_right = 396.0
offset_bottom = 30.0
texture = ExtResource("3_2yhpw")
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
